prevent ticket panels from overflowing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,6 +41,10 @@
 
     .body {
       overflow-y: auto;
+
+      .panel {
+        overflow: hidden;
+      }
     }
   }
 }
